src/test/deca/syntax/invalid/created/bigNumbers/big_FLOATDEC.deca
// Description:
//		Affection d'un flottant qui depasse la limite
// Resultat:
//		Ligne 7 : 

{
	float f = 56745678905678906789089567890567890567890.6789678907890;
}
